[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/minigames/hack/mainCanvas.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/fonts/main_font.fnt" type="BitmapFont" id=2]
[ext_resource path="res://resources/scenes/cutscenes/Mail.tscn" type="PackedScene" id=3]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 2 )

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )
won = false

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 680.0
margin/bottom = 340.0

[node name="Terminal" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 348.0
margin/top = 0.0
margin/right = 680.0
margin/bottom = 340.0
custom_fonts/font = ExtResource( 2 )
valign = 2
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HelpButton" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 650.0
margin/top = 10.0
margin/right = 670.0
margin/bottom = 30.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
text = "?"
flat = false

[node name="HelpDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 261.0
margin/top = 89.0
margin/right = 461.0
margin/bottom = 289.0
popup/exclusive = false
window/title = "Ajuda"
dialog/hide_on_ok = true

[node name="Polygon2D" type="Polygon2D" parent="."]

transform/pos = Vector2( 338, 0 )
polygon = Vector2Array( 0, 0, 5, 0, 5, 340, 0, 340 )
uv = Vector2Array(  )
color = Color( 0.519531, 0.519531, 0.519531, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false

[node name="Mail" parent="." instance=ExtResource( 3 )]

margin/left = 740.0
margin/top = 40.0
margin/right = 780.0
margin/bottom = 80.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 58.0
margin/bottom = 58.0
popup/exclusive = false
window/title = "Alerta!"
dialog/hide_on_ok = true

[connection signal="pressed" from="HelpButton" to="." method="_on_Button_pressed"]

[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]


